<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical"
    tools:context="com.example.andrea.mediterraneandietquiz.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                android:id="@+id/image_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop"
                android:src="@drawable/background_food" />
            <TextView
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_main"
                android:background="@color/ColorGreen"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/main_quiz"
                android:textColor="@color/ColorOrange"
                android:textSize="@dimen/textMain"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/enter_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main"
                android:layout_marginTop="@dimen/dimen_hint"
                android:gravity="center"
                android:hint="@string/string_hint"
                android:textColorHint="@color/soft_green"


                />


        </RelativeLayout>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"



            style="@style/MyRadioGroup"


            >


            <TextView
                style="@style/question"
                android:layout_width="match_parent"


                android:layout_height="wrap_content"
                android:text="@string/first_string"



                android:textStyle="bold|italic"


                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:scaleType="centerCrop"

                android:src="@drawable/landscape_sea" />


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/first_answer"





                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_answer"


                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_answer"

                />

            <RadioButton
                android:id="@+id/answerRight1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth_answer" />


        </RadioGroup>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"

            style="@style/MyRadioGroup"
            >

            <TextView
                style="@style/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_question"

                android:textStyle="bold|italic"


                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/food" />


            <RadioButton
                android:id="@+id/answerRight2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_answerB"


                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_answerB" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_answerB" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth_answerB" />


        </RadioGroup>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MyRadioGroup"

            android:elevation="5dp"


            >

            <TextView
                style="@style/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third_question"


                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/mietitura_in_romagna" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_answerC" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_answerC" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_answerC"


                />

            <RadioButton
                android:id="@+id/answerRight3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth_answerC"


                />


        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MyRadioGroup"

            android:elevation="5dp"


            >

            <TextView
                android:id="@+id/log"
                style="@style/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fourth_question" />

            <CheckBox
                android:id="@+id/answerRight4A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/log"
                android:drawableLeft="@drawable/croatia_flags"
                android:text="@string/first_answerD" />

            <CheckBox
                android:id="@+id/answerWrong4A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/log"
                android:drawableLeft="@drawable/egypt_flag"
                android:text="@string/second_answerD" />

            <CheckBox
                android:id="@+id/answerRight4B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/log"
                android:drawableLeft="@drawable/morocco_flags"
                android:text="@string/third_answerD"


                />

            <CheckBox
                android:id="@+id/answerWrong4B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/log"
                android:drawableLeft="@drawable/turkey_flags"
                android:text="@string/fourth_answerD" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            style="@style/MyRadioGroup"

            android:elevation="5dp"




            >

            <TextView
                style="@style/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifth_question" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/bacino_del_mediterraneo"

                />

            <EditText
                android:id="@+id/answer5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/fifth_answer"
                android:layout_marginBottom="@dimen/textMain"

                />


        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MyRadioGroup"

            android:elevation="5dp"





            >

            <TextView
                style="@style/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sixth_question"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/plant_flower" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_answerE" />


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_answerE" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_answerE" />

            <RadioButton
                android:id="@+id/answerRight6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth_answerE" />


        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MyRadioGroup"

            android:elevation="5dp"


            >

            <TextView
                android:id="@+id/sixth_question"
                style="@style/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/seventh_question" />

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:scaleType="centerCrop"
                android:src="@drawable/branch"

                />

            <CheckBox
                android:id="@+id/right_box7A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/first_answerF" />

            <CheckBox

                android:id="@+id/wrong_Box7B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_answerF" />

            <CheckBox

                android:id="@+id/wrong_box7A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/third_answerF"

                />

            <CheckBox
                android:id="@+id/right_box7B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth_answerF"


                />


        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MyRadioGroup"
            android:elevation="5dp"



            >


            <TextView
                style="@style/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/eight_question"


                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/dish" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/first_answerL"


                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_answerL"

                />

            <RadioButton
                android:id="@+id/answerRight8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_answerL"

                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth_answerL" />


        </RadioGroup>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MyRadioGroup"
            android:elevation="5dp"


            >

            <TextView

                style="@style/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:text="@string/ninth_question" />

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:scaleType="centerCrop"
                android:src="@drawable/landscape_tree"

                />

            <RadioButton
                android:id="@+id/answerRight9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/first_answerM" />

            <RadioButton
                android:id="@+id/two_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_answerM" />

            <RadioButton
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_answerL"

                />

            <RadioButton
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/fourth_answerL"


                />
        </RadioGroup>


        <Button
            android:id="@+id/resultQuiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button"


            android:onClick="checkQuiz"
            android:text="Quiz Result"
            android:textColor="@color/ColorRed"
            android:layout_marginTop="@dimen/textMain"
            android:layout_marginBottom="@dimen/textMain"

            />


    </LinearLayout>


</ScrollView>
